--- a/TTCS-hotfix/app/src/main/AndroidManifest.xml
+++ b/TTCS-hotfix/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScoreActivity" />
+        <activity android:name=".MenuActivity" />
+
+
         <activity
             android:name=".GpaChartActivity"
             android:exported="false"
