--- a/TTCS-hotfix/app/src/main/AndroidManifest.xml
+++ b/TTCS-hotfix/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".ScoreActivity" />
         <activity android:name=".MenuActivity" />
-
+        <activity android:name=".ChatActivity" />
 
         <activity
             android:name=".GpaChartActivity"
