--- a/TTCS-hotfix/app/src/main/AndroidManifest.xml
+++ b/TTCS-hotfix/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".ScoreActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".ChatActivity" />
-
+        <activity android:name=".PieChartActivity" />
         <activity
             android:name=".GpaChartActivity"
             android:exported="false"
